# Mouse-and-Cat-chase-game-with-CPP

./: CMakeLists.txt  README.md
include/: Animator.h  Button.h  Configs.h  Controller.h  EndGameMenu.h  GameLevel.h  GameOver.h  GameState.h  HelpMenu.h  LevelLoader.h  MainMenu.h  ObjectsInclude.h  Observer.h  PlayerUI.h  Resources.h  Utilities.h  YouLost.h
include/GameObjects/: FloorObject.h  GameObject.h  Presents.h
include/GameObjects/Collidable/: CollidableObject.h  WallObject.h
include/GameObjects/Collidable/MovingObjects/: CatEnemy.h  EnemyObject.h  MousePlayer.h  MovingObject.h  SmartCatEnemy.h
include/GameObjects/Collidable/PickableObject/: CMakeLists.txt  CheeseObject.h  DestroyPresent.h  DoorObject.h  FreezePresent.h  KeyObject.h  LifePresent.h  PickableObject.h  PresentObject.h  TimePresent.h
include/GameObjects/MovingObjects/: MousePlayer.h  MovingObject.h
include/GameObjects/StaticObjects/Collidable/: CollidableObject.h  WallObject.h
resources/: CMakeLists.txt
resources/Levels/: CMakeLists.txt  Level_001.txt  Level_002.txt  Level_003.txt  Level_004.txt
resources/Sounds/: CMakeLists.txt
resources/Sprites/: CMakeLists.txt
src/: Animator.cpp  Button.cpp  CMakeLists.txt  Controller.cpp  EndGameMenu.cpp  GameLevel.cpp  GameOver.cpp  GameState.cpp  HelpMenu.cpp  LevelLoader.cpp  MainMenu.cpp  PlayerUI.cpp  Resources.cpp  YouLost.cpp  main.cpp
src/GameObjects/: CMakeLists.txt  FloorObject.cpp  GameObject.cpp
src/GameObjects/Collidable/: CollidableObject.cpp  WallObject.cpp
src/GameObjects/MovingObjects/: MousePlayer.cpp  MovingObject.cpp
(+16 files in other folders)
