cmake_minimum_required (VERSION 3.26)

project (oop1_ex03)
set (MY_AUTHORS "Dima-Nikonov")

include (cmake/CompilerSettings.cmake)

add_executable (${CMAKE_PROJECT_NAME})

target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE $<$<CONFIG:DEBUG>:-fsanitize=address>)
target_link_options(${CMAKE_PROJECT_NAME} PRIVATE $<$<CONFIG:DEBUG>:-fsanitize=address>)

add_subdirectory (include)
add_subdirectory (include/GameObjects)
add_subdirectory (include/GameObjects/Collidable/MovingObjects)
add_subdirectory (include/GameObjects/Collidable)
add_subdirectory (include/GameObjects/Collidable/PickableObject)

add_subdirectory (src)
add_subdirectory (src/GameObjects)
add_subdirectory (src/GameObjects/Collidable)
add_subdirectory (src/GameObjects/Collidable/MovingObjects)
add_subdirectory (src/GameObjects/Collidable/PickableObject)

add_subdirectory (resources)
add_subdirectory (resources/Levels)
add_subdirectory (resources/Sprites)
add_subdirectory (resources/Sounds)

include (cmake/Zip.cmake)

set (SFML_LOCATION "C:/SFML/SFML-2.6.0")
set (SFML_DIR "${SFML_LOCATION}/lib/cmake/SFML")

find_package (SFML 2.6 COMPONENTS graphics audio REQUIRED)

set_target_properties (sfml-main sfml-system sfml-window sfml-graphics sfml-audio sfml-network PROPERTIES MAP_IMPORTED_CONFIG_RELWITHDEBINFO RELEASE)

target_link_libraries (${CMAKE_PROJECT_NAME} sfml-graphics sfml-main sfml-audio)

include (cmake/SFML.cmake)

